--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "lint-fix": "next lint --fix"
   },
   "dependencies": {
-    "next": "13.5.4",
+    "@types/next": "^9.0.0",
+    "next": "^13.5.4",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.11.0",
